[package]
name = "local-agent-rs"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-rustls = { version="0.26.0", features = ["tls12"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = {version="1.0.201", features = ["derive"] }
rustls-pki-types = "1.7.0"
rustls-pemfile = "2.1.2"
serde_json = "1.0.117"
thiserror = "1.0.60"
webpki = "0.22.4"
webpki-roots = "0.26.3"
log = "0.4.22"
env_logger = "0.11.5"
socket2 = "0.5.7"
async-trait = "0.1.81"

[dev-dependencies]
x509-parser = "0.16.0"
