[package]
name = "python-proton-vpn-local-agent"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type   = ["cdylib"]

[profile.release]
# Strip debug symbols in release builds
strip = true

[dependencies]
local-agent-rs = { path = "../local_agent_rs" }
pyo3 = {version="0.21.2", features = ["extension-module", "abi3-py38"]}
pyo3-asyncio-0-21 = {version="0.21.0", features = ["attributes", "tokio-runtime"]}
tokio = { version = "1.38.0", features = ["full"] }
thiserror = "1.0.60"
log = "0.4.22"
env_logger = "0.11.5"
